test_suite/tests/ui/conflict/alias-enum.stderr
error[E0425]: cannot find value `__FAIL__` in this scope
  --> tests/ui/conflict/alias-enum.rs:74:5
   |
74 |     __FAIL__;
   |     ^^^^^^^^ not found in this scope

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:46:5
   |
41 |     #[serde(alias = "a", alias = "b", alias = "c")]
   |                                  --- matches all the relevant values
...
46 |     b,
   |     ^ no value can reach this
   |
   = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:45:21
   |
41 |     #[serde(alias = "a", alias = "b", alias = "c")]
   |                                               --- matches all the relevant values
...
45 |     #[serde(alias = "c")]
   |                     ^^^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:58:22
   |
54 |     #[serde(alias = "b", alias = "c")]
   |                                  --- matches all the relevant values
...
58 |     #[serde(rename = "c")]
   |                      ^^^ no value can reach this

warning: unreachable pattern
  --> tests/ui/conflict/alias-enum.rs:70:5
   |
65 |     #[serde(alias = "B", alias = "c")]
   |                     --- matches all the relevant values
...
70 |     b,
   |     ^ no value can reach this
